[gd_scene load_steps=18 format=3 uid="uid://v4bl3ry724v"]

[ext_resource type="Script" path="res://scenes/game_object/base_enemy_class/base_enemy.gd" id="1_jcunf"]
[ext_resource type="PackedScene" uid="uid://dsv7kr7ql7bs0" path="res://scenes/component/health_component.tscn" id="2_0q7mw"]
[ext_resource type="PackedScene" uid="uid://gfdaeqcwa4ox" path="res://scenes/component/collectible_drop_component.tscn" id="3_kgkdq"]
[ext_resource type="PackedScene" uid="uid://b7py1vjt6exo3" path="res://scenes/component/velocity_component.tscn" id="4_kuqy5"]
[ext_resource type="PackedScene" uid="uid://cj36wbtxyvehs" path="res://scenes/component/hit_flash_component.tscn" id="5_4oheh"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_a3t6o"]
[ext_resource type="PackedScene" uid="uid://cq28gejbb8j1p" path="res://scenes/component/death_component.tscn" id="7_vqgth"]
[ext_resource type="PackedScene" uid="uid://ce36vngkrj73e" path="res://scenes/component/random_stream_player_2d_component.tscn" id="8_ssvro"]
[ext_resource type="PackedScene" uid="uid://c2s4v64lrud50" path="res://scenes/component/hurtbox_component.tscn" id="14_c1yhh"]

[sub_resource type="Animation" id="Animation_bt1ba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/ShadowSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 0.75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/ShadowSprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/ShadowSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_74af0"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(0, -1), Vector2(-1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/ShadowSprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 0.75), Vector2(1.6, 0.75)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/ShadowSprite2D:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(1, 0), Vector2(-1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/ShadowSprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(1, 1, 1, 0.705882), Color(1, 1, 1, 0.784314)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3r60b"]
_data = {
"RESET": SubResource("Animation_bt1ba"),
"walk": SubResource("Animation_74af0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ho8xy"]
resource_local_to_scene = true
shader = ExtResource("6_a3t6o")
shader_parameter/lerp_percent = 0.0

[sub_resource type="Curve" id="Curve_acaj5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.635568, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_jvb5n"]
curve = SubResource("Curve_acaj5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o2vp1"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 175.0
initial_velocity_max = 250.0
angular_velocity_min = -1440.0
angular_velocity_max = 1440.0
gravity = Vector3(0, 800, 0)
scale_curve = SubResource("CurveTexture_jvb5n")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7liqw"]
bg_color = Color(0.909804, 0.270588, 0.215686, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[node name="BaseEnemy" type="CharacterBody2D" groups=["enemy"]]
light_mask = 8
visibility_layer = 9
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_jcunf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3r60b")
}
autoplay = "walk"

[node name="Abilities" type="Node" parent="."]

[node name="HealthComponent" parent="." instance=ExtResource("2_0q7mw")]

[node name="CollectibleDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_kgkdq")]
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_kuqy5")]

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_4oheh")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_ho8xy")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_vqgth")]
health_component = NodePath("../HealthComponent")
particle_process_material = SubResource("ParticleProcessMaterial_o2vp1")

[node name="HitRandomAudioPlayer2DComponent" parent="." instance=ExtResource("8_ssvro")]
autoplay = true
bus = &"Master"

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 6)
offset_left = -12.0
offset_top = -23.0
offset_right = 12.0
offset_bottom = -17.0
pivot_offset = Vector2(12, 3)
theme_override_styles/fill = SubResource("StyleBoxFlat_7liqw")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("heatlh_component") instance=ExtResource("14_c1yhh")]
heatlh_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]

[node name="Visuals" type="Node2D" parent="."]

[node name="ShadowSprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(1.5, 0.75)

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
